feat: 综合功能增强和测试覆盖完善
- 增强用户管理和角色权限系统
- 完善任务管理功能和API接口
- 优化前端界面和用户体验
- 添加AI分析和通知功能
- 扩展测试覆盖率和CI/CD流程
- 完善数据模型和错误处理

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -30,6 +30,20 @@ markers =
     api: API endpoint tests
     model: Data model tests
     auth: Authentication tests
+    tasks: Task management tests
+    dashboard: Dashboard tests
+    users: User management tests
+    roles: Role management tests
+    deps: Dependency tests
+    ai: AI service tests
+    security: Security tests
+    config: Configuration tests
+    main: Main application tests
+    db: Database tests
+    rate_limit: Rate limiting tests
+    logging: Logging tests
+    schemas: Schema tests
+    utils: Utility tests
 
 # Coverage options
 [coverage:run]
