--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,19 +84,149 @@ jobs:
         working-directory: ./frontend
         run: npm ci
 
+      - name: 安装Playwright浏览器
+        working-directory: ./frontend
+        run: npx playwright install --with-deps
+
       - name: ESLint代码检查
         working-directory: ./frontend
         run: npm run lint
+
+      - name: 运行单元测试
+        working-directory: ./frontend
+        run: npm run test:coverage
+
+      - name: 上传前端覆盖率
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./frontend/coverage/lcov.info
+          flags: frontend
+          name: frontend-coverage
 
       - name: 构建检查
         working-directory: ./frontend
         run: npm run build
 
+  # E2E测试
+  e2e-test:
+    name: E2E Tests
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' || github.event_name == 'pull_request'
+
+    strategy:
+      matrix:
+        shard: [1, 2, 3]
+
+    steps:
+      - name: Checkout代码
+        uses: actions/checkout@v3
+
+      - name: 设置Node.js环境
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: ./frontend/package-lock.json
+
+      - name: 安装依赖
+        working-directory: ./frontend
+        run: npm ci
+
+      - name: 安装Playwright浏览器
+        working-directory: ./frontend
+        run: npx playwright install --with-deps
+
+      - name: 启动后端服务
+        working-directory: ./backend
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          uvicorn app.main:app --host 0.0.0.0 --port 8000 &
+          sleep 10
+        env:
+          DATABASE_URL: sqlite:///./test.db
+          SECRET_KEY: test-secret-key
+          DEBUG: true
+
+      - name: 运行E2E测试
+        working-directory: ./frontend
+        run: npx playwright test --shard=${{ matrix.shard }}/3
+        env:
+          BASE_URL: http://localhost:3000
+
+      - name: 上传E2E测试报告
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report-${{ matrix.shard }}
+          path: frontend/playwright-report/
+          retention-days: 7
+
+  # 性能测试
+  performance-test:
+    name: Performance Tests
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout代码
+        uses: actions/checkout@v3
+
+      - name: 设置Node.js环境
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: ./frontend/package-lock.json
+
+      - name: 安装依赖
+        working-directory: ./frontend
+        run: npm ci
+
+      - name: 安装Playwright浏览器
+        working-directory: ./frontend
+        run: npx playwright install --with-deps
+
+      - name: 启动后端服务
+        working-directory: ./backend
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          uvicorn app.main:app --host 0.0.0.0 --port 8000 &
+          sleep 10
+        env:
+          DATABASE_URL: sqlite:///./test.db
+          SECRET_KEY: test-secret-key
+          DEBUG: true
+
+      - name: 运行性能测试
+        working-directory: ./frontend
+        run: npm run test:e2e tests/performance.test.js
+        env:
+          BASE_URL: http://localhost:3000
+
+      - name: 安装Artillery
+        run: npm install -g artillery@latest
+
+      - name: 运行API负载测试
+        working-directory: ./frontend
+        run: artillery run performance-test.yml --target http://localhost:8000
+
+      - name: 上传性能测试报告
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: performance-reports
+          path: |
+            frontend/playwright-report/
+            artillery-report.html
+          retention-days: 7
+
   # Docker镜像构建
   docker-build:
     name: Docker Build
     runs-on: ubuntu-latest
-    needs: [backend-test, frontend-test]
+    needs: [backend-test, frontend-test, e2e-test]
     if: github.event_name == 'push'
 
     steps:
