--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,28 +7,44 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest --watch",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug"
   },
   "dependencies": {
-    "vue": "^3.3.11",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
-    "axios": "^1.6.5",
-    "element-plus": "^2.5.2",
     "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.6.5",
     "dayjs": "^1.11.10",
-    "vuedraggable": "^4.1.0",
-    "xlsx": "^0.18.5",
-    "marked": "^11.1.1",
+    "echarts": "^5.5.0",
+    "element-plus": "^2.5.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
-    "echarts": "^5.5.0",
-    "vue-echarts": "^6.6.9"
+    "marked": "^11.1.1",
+    "pinia": "^2.1.7",
+    "vue": "^3.3.11",
+    "vue-echarts": "^6.6.9",
+    "vue-router": "^4.2.5",
+    "vuedraggable": "^4.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "@vitejs/plugin-vue": "^5.0.2",
-    "vite": "^5.0.11",
+    "@vitest/coverage-v8": "^4.0.10",
+    "@vitest/ui": "^4.0.10",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^8.56.0",
-    "eslint-plugin-vue": "^9.19.2"
+    "eslint-plugin-vue": "^9.19.2",
+    "happy-dom": "^20.0.10",
+    "jsdom": "^27.2.0",
+    "vite": "^5.0.11",
+    "vitest": "^4.0.10"
   }
 }
